<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".StartScreen">

    <ImageView
        android:id="@+id/imageView_clowns"
        android:layout_width="437dp"
        android:layout_height="704dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/yayay" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="onClickStore"
        android:text="@string/orders"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/button3"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="onClickPet"
        android:text="@string/pets"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" /><TextView
        android:id="@+id/textView2"
        android:layout_width="260dp"
        android:layout_height="95dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/flowers"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/white"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="307dp"
        android:layout_height="98dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/clowns"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.802" />


    <Button
        android:id="@+id/btn_sound"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:onClick="onClick"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.513"
        tools:text=" " />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="64dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/log" />

    <Button
        android:id="@+id/btn_sound2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="77dp"
        android:onClick="onClickUser"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:text=" " />


</androidx.constraintlayout.widget.ConstraintLayout>